update vacancy item data structure

--- a/frontend/src/components/base/navigation/Pagination/Pagination.module.scss
+++ b/frontend/src/components/base/navigation/Pagination/Pagination.module.scss
@@ -39,6 +39,7 @@
   justify-content: center;
   width: 46px;
   height: 46px;
+  line-height: 46px;
   border-radius: 8px;
   color: $gray-3;
   background: $gray-6;
