--- a/frontend/src/components/base/controls/Input/Input.module.scss
+++ b/frontend/src/components/base/controls/Input/Input.module.scss
@@ -18,7 +18,8 @@
   }
 
   &,
-  :global(.ant-input) {
+  :global(.ant-input),
+  :global(.ant-picker-input) > input {
     @include paragraph-2;
 
     box-shadow: none !important;
@@ -32,4 +33,10 @@
 .textarea {
   resize: none !important;
   height: 154px !important;
+}
+
+.postscript {
+  @include caption-1;
+
+  color: $gray-3;
 }
