--- a/frontend/src/components/main/Candidates/Candidates.module.scss
+++ b/frontend/src/components/main/Candidates/Candidates.module.scss
@@ -18,26 +18,40 @@
 }
 
 .nothing {
+  @include paragraph-2;
+
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
   flex-grow: 1;
   gap: 16px;
+  text-align: center;
 }
 
-.filters {
-  display: flex;
-  align-items: center;
-  gap: 24px;
+.nothingIcon {
+  width: 150px;
+  height: 150px;
+
+  path {
+    stroke: $gray-5;
+  }
 }
 
 .searchInput {
   width: 422px;
 }
 
-.mentors {
+.candidates {
   display: flex;
   flex-direction: column;
   gap: 8px;
+}
+
+.sorting {
+  @include paragraph-2;
+
+  display: flex;
+  align-items: center;
+  gap: 16px;
 }
