--- a/frontend/src/components/main/Organizations/Organizations.module.scss
+++ b/frontend/src/components/main/Organizations/Organizations.module.scss
@@ -4,7 +4,7 @@
   display: flex;
   flex-direction: column;
   gap: 16px;
-  flex-grow: 1;
+  height: 100%;
 }
 
 .header {
@@ -20,24 +20,29 @@
 .nothing {
   display: flex;
   flex-direction: column;
-  align-items: center;
   justify-content: center;
-  flex-grow: 1;
-  gap: 16px;
-}
-
-.filters {
-  display: flex;
   align-items: center;
-  gap: 24px;
+  gap: 16px;
+  height: 100%;
 }
 
-.searchInput {
-  width: 422px;
+.nothingIcon {
+  width: 150px;
+  height: 150px;
 }
 
-.mentors {
+.nothingText {
+  @include paragraph-2;
+
+  text-align: center;
+}
+
+.organizations {
   display: flex;
   flex-direction: column;
   gap: 8px;
+}
+
+.searchInput {
+  width: 636px;
 }
