--- a/frontend/src/assets/css/index.scss
+++ b/frontend/src/assets/css/index.scss
@@ -6,6 +6,10 @@
   box-sizing: border-box;
 }
 
+html {
+  color-scheme: light;
+}
+
 body {
   @include paragraph-1;
 
@@ -59,6 +63,34 @@ form {
 a {
   color: inherit;
   text-decoration: none;
+}
+
+*::-webkit-scrollbar {
+  width: 14px;
+}
+
+*::-webkit-scrollbar-track {
+  background: none;
+}
+
+*::-webkit-scrollbar-thumb {
+  border: 5px solid $white;
+  background: $gray-5;
+  border-radius: 10px;
+}
+
+body::-webkit-scrollbar {
+  width: 14px;
+}
+
+body::-webkit-scrollbar-track {
+  background: none;
+}
+
+body::-webkit-scrollbar-thumb {
+  border: 3.5px solid $gray-6;
+  background: $gray-4;
+  border-radius: 10px;
 }
 
 .ant-form-item-explain-error {
