--- a/frontend/src/assets/css/index.scss
+++ b/frontend/src/assets/css/index.scss
@@ -102,3 +102,30 @@ body::-webkit-scrollbar-thumb {
 .ant-form-item {
   margin: 0;
 }
+
+.ant-notification .ant-notification-notice {
+  padding: 16px;
+  box-shadow: 0px 0px 20px rgba(71, 91, 172, 0.25);
+  background: $white;
+  border-radius: 8px;
+
+  .ant-notification-notice-message {
+    @include paragraph-1;
+    margin-bottom: 8px;
+  }
+
+  .ant-notification-notice-description {
+    @include paragraph-3;
+  }
+
+  .ant-notification-notice-close {
+    width: 24px;
+    height: 24px;
+    background: none !important;
+    transition: $transition;
+
+    &:hover {
+      transform: scale(1.2);
+    }
+  }
+}
