--- a/frontend/src/components/base/user/MentorCard/MentorCard.module.scss
+++ b/frontend/src/components/base/user/MentorCard/MentorCard.module.scss
@@ -7,6 +7,7 @@
   background: $white;
   border-radius: 8px;
   transition: $transition;
+  cursor: pointer;
 
   &:hover {
     box-shadow: 0px 0px 20px rgba(71, 91, 172, 0.25);
