--- a/frontend/src/components/base/Map/Map.module.scss
+++ b/frontend/src/components/base/Map/Map.module.scss
@@ -10,3 +10,20 @@
   border-radius: 8px;
   height: 100%;
 }
+
+.card {
+  position: absolute;
+  top: 8px;
+  left: 8px;
+  bottom: 8px;
+  width: 300px;
+  opacity: 0;
+  transform: scale(0);
+  transform-origin: top left;
+  transition: $transition;
+
+  &.active {
+    transform: none;
+    opacity: 1;
+  }
+}
