Add profile mobile version

--- a/frontend/src/assets/css/config.scss
+++ b/frontend/src/assets/css/config.scss
@@ -228,6 +228,12 @@ $transition: 0.3s;
   }
 }
 
+@mixin full-bottom {
+  @include mobile {
+    margin-bottom: -24px;
+  }
+}
+
 @mixin scrollable($pad) {
   overflow: auto;
   margin-left: -$pad;
