Add global profile page, add password change page

--- a/frontend/src/components/layout/MenuContainer/MenuContainer.module.scss
+++ b/frontend/src/components/layout/MenuContainer/MenuContainer.module.scss
@@ -62,3 +62,13 @@
 .footer {
   align-self: flex-start;
 }
+
+@include mobile {
+  .menu {
+    display: none;
+  }
+
+  .footer {
+    display: none;
+  }
+}
