--- a/frontend/src/components/main/Profile/Profile.module.scss
+++ b/frontend/src/components/main/Profile/Profile.module.scss
@@ -85,14 +85,15 @@
   text-transform: uppercase;
 }
 
-.passwordBtn :global(.icon) {
-  display: none;
-}
-
 .mobileImgContainer {
   display: none;
   align-items: center;
   gap: 16px;
+}
+
+.passwordBtn.mobile {
+  display: none;
+  font-size: 16px !important;
 }
 
 @include mobile {
@@ -146,9 +147,9 @@
   }
 
   .passwordBtn {
-    font-size: 16px !important;
+    display: none;
 
-    :global(.icon) {
+    &.mobile {
       display: block;
     }
   }
