--- a/frontend/src/components/base/controls/Popup/Popup.module.scss
+++ b/frontend/src/components/base/controls/Popup/Popup.module.scss
@@ -34,6 +34,7 @@
   bottom: 0;
   left: 0;
   right: 0;
+  max-height: 85%;
   z-index: 100;
   border-radius: 24px 24px 0 0;
   background: $white;
