--- a/frontend/src/components/base/controls/Select/Select.module.scss
+++ b/frontend/src/components/base/controls/Select/Select.module.scss
@@ -39,7 +39,7 @@
   position: relative;
   padding: 10px 12px;
   width: 100%;
-  z-index: 10;
+  //z-index: 10;
   background: $white;
   border-radius: 8px;
   border: 1px solid $gray-4;
