--- a/frontend/src/components/base/controls/Popup/Popup.module.scss
+++ b/frontend/src/components/base/controls/Popup/Popup.module.scss
@@ -38,6 +38,7 @@
   z-index: 100;
   border-radius: 24px 24px 0 0;
   background: $white;
+  color: $gray-2;
   transform: translateY(100%);
   transition: $transition;
 
