--- a/frontend/src/components/base/navigation/Tabs/Tabs.module.scss
+++ b/frontend/src/components/base/navigation/Tabs/Tabs.module.scss
@@ -5,6 +5,7 @@
   align-items: center;
   position: relative;
   width: min-content;
+  max-width: 100%;
   padding: 4px;
   background: $white;
   border: 1px solid $gray-5;
@@ -14,6 +15,8 @@
 .tab {
   @include paragraph-2;
 
+  flex-shrink: 1;
+  min-width: 0;
   padding: 8px 24px;
   border-radius: 30px;
   white-space: nowrap;
