--- a/frontend/src/components/layout/MobileMenu/MobileMenu.module.scss
+++ b/frontend/src/components/layout/MobileMenu/MobileMenu.module.scss
@@ -56,6 +56,7 @@
 .user {
   display: flex;
   align-items: center;
+  align-self: flex-start;
   gap: 16px;
 }
 
@@ -109,14 +110,16 @@
   align-items: center;
   align-self: flex-start;
   gap: 8px;
-}
 
-.linksLinkIcon {
-  width: 24px;
-  height: 24px;
+  svg {
+    width: 24px;
+    height: 24px;
+  }
 }
 
 .footer {
-  align-self: flex-start;
+  display: flex;
+  flex-direction: column;
+  gap: 24px;
   margin-top: auto;
 }
