--- a/frontend/src/components/main/CandidateMain/CandidateMain.module.scss
+++ b/frontend/src/components/main/CandidateMain/CandidateMain.module.scss
@@ -3,107 +3,113 @@
 .container {
   display: flex;
   flex-direction: column;
-  gap: 32px;
+  gap: 64px;
   width: 100%;
 }
 
 .intro {
-  @include full-width;
-
-  position: relative;
-  margin-top: calc(-24px - 8px);
-  padding: 0 !important;
+  display: flex;
+  flex-direction: row-reverse;
 }
 
 .introImg {
   width: 100%;
+  max-height: 534px;
+  object-fit: cover;
+  object-position: bottom;
+  border-radius: 0 24px 24px 0;
 }
 
 .introContent {
   display: flex;
   flex-direction: column;
-  gap: 16px;
-  position: absolute;
-  top: calc(32px + 8px);
-  left: 23px;
-  right: 23px;
+  align-items: center;
+  justify-content: center;
+  gap: 32px;
+  width: 100%;
+  padding: 24px;
   text-align: center;
+  background: $white;
+  border-radius: 24px 0 0 24px;
 }
 
 .introTitle {
+  @include heading-1;
+
   padding: 16px;
-  background: $white;
+  background: $purpure;
   border-radius: 20px;
   box-shadow: 0px 0px 20px rgba(71, 91, 172, 0.25);
-  color: $purpure;
-  font-family: "Alter Aves";
-  font-weight: 400;
-  font-size: 24px;
-  line-height: 130%;
+  color: $white;
   text-transform: uppercase;
 
   .intro.orange & {
-    color: $orange;
+    background: $orange;
   }
 }
 
 .introDescription {
-  @include paragraph-2;
-  color: $white;
+  @include paragraph-1;
 }
 
 .block {
   display: flex;
   flex-direction: column;
-  gap: 16px;
+  gap: 32px;
+}
+
+.introBtn {
+  width: 100%;
+  max-width: 329px;
 }
 
 .who {
-  @include main-scrollable;
-
   display: flex;
-  gap: 8px;
+  gap: 32px;
 }
 
 .whoItem {
-  @include caption-1;
+  @include paragraph-1;
 
   display: flex;
   flex-direction: column;
   align-items: center;
-  flex-shrink: 0;
-  gap: 8px;
-  width: 109px;
-  padding: 8px;
+  gap: 16px;
+  width: 100%;
+  padding: 24px;
   background: $white;
-  border-radius: 8px;
+  border-radius: 24px;
+  text-align: center;
 }
 
 .whoItemIcon {
-  width: 24px;
-  height: 24px;
+  width: 64px;
+  height: 64px;
 }
 
 .why {
   @include main-scrollable;
 
   display: flex;
-  gap: 8px;
+  gap: 32px;
 }
 
 .whyItem {
   display: flex;
   flex-direction: column;
-  flex-shrink: 0;
-  gap: 8px;
-  padding: 16px;
-  width: 250px;
-  border-radius: 8px;
+  gap: 16px;
+  padding: 24px;
+  width: 100;
+  border-radius: 24px;
   background: $white;
 }
 
+.whyItemTitle {
+  @include heading-3;
+}
+
 .whyItemText {
-  @include paragraph-2;
+  @include paragraph-1;
 
   .colored {
     color: $purpure;
@@ -112,26 +118,28 @@
 
 .directions {
   display: flex;
-  flex-wrap: wrap;
+  justify-content: space-between;
   gap: 8px;
 }
 
 .direction {
-  @include paragraph-1;
+  @include paragraph-2;
 
   padding: 8px 24px;
   background: $white;
+  text-align: center;
   border-radius: 59px;
 }
 
 .timelineContainer {
+  // TODO: now it is not full width
   @include full-width;
 
   display: flex;
   flex-direction: column;
-  gap: 16px;
-  padding-top: 24px;
-  padding-bottom: 24px;
+  gap: 32px;
+  padding-top: 64px;
+  padding-bottom: 64px;
   margin-bottom: -24px;
   background: $white;
   border-radius: 24px 24px 0 0;
@@ -140,13 +148,14 @@
 .timeline {
   display: flex;
   flex-direction: column;
-  gap: 16px;
+  gap: 24px;
 }
 
 .timelineItem {
   display: flex;
-  gap: 8px;
+  gap: 16px;
   position: relative;
+  width: 100%;
 
   &:not(:last-child):after {
     content: "";
@@ -154,7 +163,7 @@
     width: 1px;
     background: $gray-5;
     top: 14px;
-    bottom: -18px;
+    bottom: -26px;
     left: 5.5px;
   }
 }
@@ -175,24 +184,31 @@
 
 .timelineItemContent {
   display: flex;
-  flex-direction: column;
   gap: 8px;
+  width: 100%;
+
+  &:not(:last-child) {
+    padding-bottom: 24px;
+    border-bottom: 1px solid $gray-5;
+  }
 }
 
 .timelineItemHeader {
   display: flex;
   flex-direction: column;
   gap: 4px;
+  width: 451px;
+  flex-shrink: 0;
 }
 
 .timelineItemDates {
-  @include caption-1;
+  @include paragraph-3;
 
   color: $gray-3;
 }
 
 .timelineItemDescription {
-  @include paragraph-2;
+  @include paragraph-1;
 
   .colored {
     color: $purpure;
@@ -228,4 +244,176 @@
 .notificationIcon {
   width: 24px;
   height: 24px;
+}
+
+@include tablet {
+  .intro {
+    @include full-width;
+
+    position: relative;
+    margin-top: calc(-24px - 8px);
+    padding: 0 !important;
+  }
+
+  .introImg {
+    border-radius: 0;
+    max-height: 943px;
+  }
+
+  .introContent {
+    position: absolute;
+    padding: 0;
+    top: calc(32px + 8px);
+    left: 23px;
+    right: 23px;
+    width: auto;
+    background: none;
+  }
+
+  .introTitle {
+    background: $white;
+    color: $purpure;
+
+    .intro.orange & {
+      color: $orange;
+      background: $white;
+    }
+  }
+
+  .introDescription {
+    color: $white;
+  }
+
+  .who {
+    gap: 16px;
+  }
+
+  .whoItem {
+    @include paragraph-2;
+  }
+
+  .why {
+    gap: 16px;
+  }
+
+  .whyItemText {
+    @include paragraph-2;
+  }
+
+  .directions {
+    justify-content: flex-start;
+    flex-wrap: wrap;
+    gap: 16px;
+  }
+
+  .timelineItemDescription {
+    @include paragraph-2;
+  }
+
+  .timelineItemHeader {
+    width: 317px;
+  }
+}
+
+@include mobile {
+  .container {
+    gap: 32px;
+  }
+
+  .introImg {
+    max-height: initial;
+  }
+
+  .introContent {
+    gap: 16px;
+  }
+
+  .introTitle {
+    font-size: 24px;
+  }
+
+  .introDescription {
+    @include paragraph-2;
+  }
+
+  .block {
+    gap: 16px;
+  }
+
+  .who {
+    @include main-scrollable;
+    gap: 8px;
+  }
+
+  .whoItem {
+    @include caption-1;
+
+    flex-shrink: 0;
+    gap: 8px;
+    padding: 8px;
+    width: 109px;
+    border-radius: 8px;
+  }
+
+  .whoItemIcon {
+    width: 24px;
+    height: 24px;
+  }
+
+  .why {
+    @include main-scrollable;
+    gap: 8px;
+  }
+
+  .whyItem {
+    flex-shrink: 0;
+    gap: 8px;
+    padding: 16px;
+    width: 250px;
+    border-radius: 8px;
+  }
+
+  .whyItemTitle {
+    @include heading-6;
+  }
+
+  .directions {
+    gap: 8px;
+  }
+
+  .direction {
+    @include paragraph-1;
+  }
+
+  .timeline {
+    gap: 16px;
+  }
+
+  .timelineItem {
+    gap: 8px;
+  }
+
+  .timelineContainer {
+    gap: 16px;
+    padding-top: 24px;
+    padding-bottom: 24px;
+  }
+
+  .timelineItemContent {
+    flex-direction: column;
+    padding: 0;
+    border: none;
+  }
+
+  .timelineItemHeader {
+    width: auto;
+  }
+
+  .timelineItemDates {
+    font-size: 12px;
+  }
+
+  .timelineItemTitle {
+    @include heading-6;
+  }
 }
