--- a/frontend/src/components/base/MobileFilters/MobileFilters.module.scss
+++ b/frontend/src/components/base/MobileFilters/MobileFilters.module.scss
@@ -1,24 +1,25 @@
 @import "assets/css/config";
 
 .container {
-  display: none;
+  display: block;
   flex-shrink: 0;
   width: 24px;
   height: 24px;
 }
 
-.icon {
+.iconContainer {
   position: relative;
   width: 100%;
   height: 100%;
+  transition: $transition;
 
   &:after {
     content: "";
     position: absolute;
     width: 8px;
     height: 8px;
-    right: 0;
-    top: 0;
+    right: -2px;
+    top: -1px;
     background: $orange;
     border-radius: 50%;
     opacity: 0;
@@ -28,6 +29,16 @@
   &.mark:after {
     opacity: 1;
   }
+
+  &:hover {
+    transform: scale(1.1);
+    cursor: pointer;
+  }
+}
+
+.icon {
+  width: 100%;
+  height: 100%;
 }
 
 .popupHeader {
@@ -90,8 +101,67 @@
   }
 }
 
+.desktopPopup {
+  position: relative;
+}
+
+.desktopPopupBackdrop {
+  position: fixed;
+  z-index: 100;
+
+  .desktopPopup.active & {
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+  }
+}
+
+.desktopPopupContent {
+  display: flex;
+  flex-direction: column;
+  gap: 16px;
+  position: absolute;
+  top: 7px;
+  right: 0;
+  border-radius: 8px;
+  background: $white;
+  box-shadow: 0px 0px 20px rgba(71, 91, 172, 0.25);
+  overflow: hidden;
+  max-height: 0;
+  width: 375px;
+  opacity: 0;
+  z-index: 200;
+  transition: $transition;
+
+  .desktopPopup.active & {
+    padding: 16px;
+    max-height: 500px;
+    opacity: 1;
+    overflow: visible;
+  }
+}
+
+.desktopPopupControls {
+  display: flex;
+  align-items: center;
+  gap: 24px;
+
+  > * {
+    width: 100%;
+  }
+}
+
+.mobilePopup {
+  display: none;
+}
+
 @include mobile {
-  .container {
-    display: block;
+  .desktopPopup {
+    display: none;
+  }
+
+  .mobilePopup {
+    display: flex;
   }
 }
