--- a/frontend/src/components/base/MobileFilters/MobileFilters.module.scss
+++ b/frontend/src/components/base/MobileFilters/MobileFilters.module.scss
@@ -122,7 +122,7 @@
   flex-direction: column;
   gap: 16px;
   position: absolute;
-  top: 7px;
+  top: calc(100% + 19px);
   right: 0;
   border-radius: 8px;
   background: $white;
