--- a/frontend/src/components/base/controls/Checkbox/Checkbox.module.scss
+++ b/frontend/src/components/base/controls/Checkbox/Checkbox.module.scss
@@ -12,9 +12,14 @@
   align-items: center;
   gap: 8px;
   cursor: pointer;
+
+  &.small {
+    @include caption-1;
+  }
 }
 
 .icon {
+  flex-shrink: 0;
   width: 24px;
   height: 24px;
   border: 1px solid $gray-3;
