--- a/frontend/src/components/base/controls/Popup/Popup.module.scss
+++ b/frontend/src/components/base/controls/Popup/Popup.module.scss
@@ -1,8 +1,5 @@
 @import "assets/css/config";
 
-.container {
-}
-
 .backdrop {
   display: block;
   position: fixed;
@@ -28,22 +25,32 @@
 .popup {
   display: flex;
   flex-direction: column;
-  gap: 24px;
+  gap: 16px;
   position: fixed;
-  padding: 24px 16px;
-  bottom: 0;
-  left: 0;
-  right: 0;
+  padding: 32px;
+  top: 50%;
+  left: 50%;
   max-height: 85%;
+  max-width: 90%;
   z-index: 100;
-  border-radius: 24px 24px 0 0;
+  border-radius: 8px;
   background: $white;
   color: $gray-2;
-  transform: translateY(100%);
+  transform: scale(0) translate(-50%, -50%);
+  transform-origin: left top;
   transition: $transition;
 
   .container.active & {
-    transform: none;
+    transform: scale(1) translate(-50%, -50%);
+  }
+
+  :global(.control) {
+    align-self: flex-start;
+  }
+
+  :global(.controls) {
+    display: flex;
+    gap: 24px;
   }
 }
 
@@ -51,4 +58,38 @@
   display: flex;
   align-items: center;
   justify-content: space-between;
+}
+
+@include mobile {
+  .popup {
+    gap: 24px;
+    right: 0;
+    left: 0;
+    bottom: 0;
+    top: auto;
+    max-width: initial;
+    padding: 24px 16px;
+    border-radius: 24px 24px 0 0;
+    transform: translateY(100%);
+
+    > * {
+      width: 100% !important;
+    }
+
+    .container.active & {
+      transform: none;
+    }
+
+    :global(.control) {
+      width: 100%;
+
+      &:global(.desktop) {
+        display: none;
+      }
+    }
+  }
+
+  .popupTitle {
+    @include heading-5;
+  }
 }
