Add 'add department' modal, update colors

--- a/frontend/src/assets/css/config.scss
+++ b/frontend/src/assets/css/config.scss
@@ -7,12 +7,12 @@ $gray-4: #c1c2c7;
 $gray-5: #d7d8de;
 $gray-6: #e9eaee;
 $white: #ffffff;
-$blue: #2f80ed;
-$red: #eb5757;
-$orange: #ff9900;
-$green: #219653;
-$purpure: #b390ec;
-$light-blue: #5cd5dd;
+$blue: #3F6FD1;
+$red: #FF0F43;
+$orange: #FFBE55;
+$green: #038D77;
+$purpure: #B390EC;
+$light-blue: #5CD5DD;
 
 $text: $gray-2;
 
