Improve mentor pages

--- a/frontend/src/components/main/Interns/Interns.module.scss
+++ b/frontend/src/components/main/Interns/Interns.module.scss
@@ -35,8 +35,18 @@
   }
 }
 
+.filters {
+  display: flex;
+  align-items: center;
+  gap: 8px;
+}
+
 .searchInput {
   width: 422px;
+}
+
+.filtersSelect {
+  width: 180px;
 }
 
 .interns {
