--- a/frontend/src/components/base/controls/Popup/Popup.module.scss
+++ b/frontend/src/components/base/controls/Popup/Popup.module.scss
@@ -1,5 +1,10 @@
 @import "assets/css/config";
 
+.container {
+  position: fixed;
+  z-index: 1;
+}
+
 .backdrop {
   display: block;
   position: fixed;
@@ -59,6 +64,9 @@
   display: flex;
   align-items: center;
   justify-content: space-between;
+}
+
+.popupTitle {
 }
 
 @include mobile {
