Add changing current internship for curator

--- a/frontend/src/components/layout/MenuContainer/MenuContainer.module.scss
+++ b/frontend/src/components/layout/MenuContainer/MenuContainer.module.scss
@@ -52,6 +52,17 @@
   height: 24px;
 }
 
+.bottomSelect {
+  margin-top: auto;
+  position: sticky;
+  bottom: 16px;
+}
+
+.bottomSelectHeader {
+  border: none;
+  padding: 0;
+}
+
 .body {
   display: flex;
   flex-direction: column;
