--- a/frontend/src/components/base/controls/Select/Select.module.scss
+++ b/frontend/src/components/base/controls/Select/Select.module.scss
@@ -50,9 +50,14 @@
     color: $gray-4;
   }
 
-  .select.active & {
+  .select.active:not(.up) & {
     border-bottom-left-radius: 0;
     border-bottom-right-radius: 0;
+  }
+
+  .select.active.up & {
+    border-top-left-radius: 0;
+    border-top-right-radius: 0;
   }
 
   .select.disabled & {
@@ -89,6 +94,12 @@
   box-shadow: 0px 0px 20px rgba(71, 91, 172, 0.25);
   transition: $transition;
 
+  .select.up & {
+    top: auto;
+    bottom: calc(100% - 0.5px);
+    border-radius: 8px 8px 8px 0;
+  }
+
   .select.active & {
     padding: 16px 0;
     max-height: 350px;
@@ -97,7 +108,14 @@
 
   .select.same & {
     width: 100%;
+  }
+
+  .select.same:not(.up) & {
     border-top-right-radius: 0;
+  }
+
+  .select.same.up & {
+    border-bottom-right-radius: 0;
   }
 }
 
