Add file upload to test task modal

--- a/frontend/src/components/base/controls/File/File.module.scss
+++ b/frontend/src/components/base/controls/File/File.module.scss
@@ -28,3 +28,18 @@
 
   color: $gray-3;
 }
+
+.fileRemoveIcon {
+  width: 24px;
+  height: 24px;
+  transition: $transition;
+
+  path {
+    stroke: $red;
+  }
+
+  &:hover {
+    transform: scale(1.2);
+    cursor: pointer;
+  }
+}
