--- a/frontend/src/components/base/controls/Popup/Popup.module.scss
+++ b/frontend/src/components/base/controls/Popup/Popup.module.scss
@@ -66,7 +66,8 @@
   justify-content: space-between;
 }
 
-.popupTitle {
+.popupHeaderIcon {
+  display: none;
 }
 
 @include mobile {
@@ -100,5 +101,9 @@
 
   .popupTitle {
     @include heading-5;
+  }
+
+  .popupHeader {
+    display: flex;
   }
 }
